[gd_scene load_steps=2 format=3 uid="uid://b1r5vd4jd78t8"]

[ext_resource type="Script" path="res://scenes/config/misc/misc.gd" id="1_bqxr5"]

[node name="OtherSettings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
vertical_scroll_mode = 2
script = ExtResource("1_bqxr5")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="cont" type="VBoxContainer" parent="margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="open_notif_sounds" type="CheckButton" parent="margin/cont"]
layout_mode = 2
button_pressed = true
text = "Se escuchan sonidos
de mensaje recibido
cuando el programa
está activo"

[node name="auto_update" type="CheckButton" parent="margin/cont"]
layout_mode = 2
button_pressed = true
text = "Actualizar automáti-
camente cuando te
conectes a un servi-
dor con una versión
más adelantada"

[node name="open_help" type="Button" parent="margin/cont"]
layout_mode = 2
text = "Mostrar menú inicial"

[connection signal="pressed" from="margin/cont/open_help" to="." method="_on_open_help_pressed"]
